public/trainer.css
h1 {
    text-align: center;
    color: white;
    font-style: italic;
    height: 30px;
    font-size: 50px;
}

body {
    background-color: rgb(129, 19, 19);
    background-image: "https://i.imgur.com/csEhMwm.png";
    margin: 20px;
    padding: 40px;
    color: white;
 
    
}
.inputForm {
    color: white;
    font-style:inherit;
    float: left;  
    margin: 10px;
    padding: 20px;
    border: 5px solid rgb(90, 4, 4);
    font-family: Arial, Helvetica, sans-serif;


 }
.box {
    float: right;


}
input:hover {
    background-color:rgb(181, 224, 64)
}
input:focus {
    background-color: yellow;
  }
nav { text-align: center;
    border-bottom: 1px solid lightgrey;
    height: 50px;
    font-family: Arial, Helvetica, sans-serif;
}
a:link {
    color: rgb(231, 220, 227);
    padding: 5px;
}
a:visited {
    color: rgb(17, 0, 255);
    
}
a:hover {
    color: red;
  }
  
.active:link {
    color: white;
    
}

h2 {
    height: 30px;
    margin-left: 20px;
    color: white;    
    font-family:  Helvetica, sans-serif;       
}

main {    
    padding-bottom: 30px;
    border-bottom: 1px solid lightgrey;
    height: 400px;
    border: 10px solid lightgrey;
}


img { 
    
    float: right;
    margin-left: 40px;
    margin-bottom: 40px;
    padding: 10px;
    height: auto;
    width: 50%;
    color: white;
    border: 10px solid lightgrey;
    font-family: Arial, Helvetica, sans-serif;
}

